@@ -212,7 +212,12 @@ fun read_instantiate _ [] _ thm = thm
         val (xs, ss) = Library.split_list insts;
         val Ts = map get_typ xs;
 
-        val (ts, envT) = ProofContext.read_termTs ctxt (ss ~~ Ts);
+        val used = add_term_tvarnames (prop_of thm,[])
+        (* Names of TVars occuring in thm.  read_termTs ensures
+           that new TVars introduced when reading the instantiation string
+           are distinct from used ones. *)
+
+        val (ts, envT) = ProofContext.read_termTs used ctxt (ss ~~ Ts);
         val cenvT = map (apsnd (Thm.ctyp_of sign)) envT;
         val cenv =
           map (fn (xi, t) => pairself (Thm.cterm_of sign) (Var (xi, fastype_of t), t))
